# systems-forge

./: .bazelrc  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  MODULE.bazel  README.md  build_script.ps1  build_script.sh  system-forge.cc  system-forge.h
benchmarks/allocator/: BUILD.bazel  CMakeLists.txt  allocator_bench.cpp
components/allocator/: CMakeLists.txt  abi-design.md
components/allocator/include/: allocator.h
components/allocator/src/: allocator.c  tls_allocator.c
components/hashmap/: Cargo.toml
components/hashmap/include/: hashmap.h
components/hashmap/src/: lib.rs
libs/allocator/: abi-design.md
libs/allocator/arena/: BUILD.bazel  CMakeLists.txt
libs/allocator/arena/include/: arena.h
libs/allocator/arena/src/: arena.c
libs/allocator/include/: allocator.h
libs/allocator/pool/: BUILD.bazel  abi-design.md
libs/allocator/pool/include/: pool.h
libs/allocator/pool/src/: pool.c
libs/allocator/src/: threadsafe_allocator.c
libs/arena/: abi-design.md
libs/arena/include/: arena.h
libs/arena/src/: arena.c
libs/data/hashmap/: abi-desgin.md
libs/data/hashtable/: BUILD.bazel  CMakeLists.txt  abi-design.md
libs/data/hashtable/include/: cwisstable.h  hashtable.h
libs/data/hashtable/src/: hashtable.c
libs/data/linkedlist/: BUILD.bazel  CMakeLists.txt
libs/data/linkedlist/include/: linkedlist.h
libs/data/linkedlist/src/: linkedlist.c
libs/hashmap/src/: lib.rs
libs/highwayhash/: CMakeLists.txt  README.md
libs/pool/: CMakeLists.txt  abi-design.md
libs/pool/include/: pool.h
libs/pool/src/: pool.c
libs/security/highwayhash/: BUILD.bazel
libs/security/highwayhash/include/: highwayhash.h
libs/security/highwayhash/src/: highwayhash.c
