cc_library(
    name = "arena",
    srcs = [
        "src/arena.c",
    ],
    hdrs = [
        "include/arena.h",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    copts = [
        "-std=c11",
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "arena_test",
    srcs = ["src/arena.c"],
    hdrs = ["include/arena.h"],
    includes = ["include"],
    copts = [
        "-std=c11",
        "-Wall",
        "-Wextra",
    ],
)
